Adicionando Objeto Enemy ao jogo

--- a/ArenaDeBatalha/ArenaDeBatalha.GUI/ArenaDeBatalha.GUI.csproj
+++ b/ArenaDeBatalha/ArenaDeBatalha.GUI/ArenaDeBatalha.GUI.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FormPrincipal.cs">
@@ -78,6 +79,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ArenaDeBatalha.GameLogic\ArenaDeBatalha.GameLogic.csproj">
+      <Project>{9d35d27b-84d7-47a8-a080-6398ca3a89b1}</Project>
+      <Name>ArenaDeBatalha.GameLogic</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
