--- a/ArenaDeBatalha/ArenaDeBatalha.GameLogic/ArenaDeBatalha.GameLogic.csproj
+++ b/ArenaDeBatalha/ArenaDeBatalha.GameLogic/ArenaDeBatalha.GameLogic.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Background.cs" />
+    <Compile Include="Enemy.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Media.Designer.cs">
