--- a/ArenaDeBatalha/ArenaDeBatalha.GameLogic/ArenaDeBatalha.GameLogic.csproj
+++ b/ArenaDeBatalha/ArenaDeBatalha.GameLogic/ArenaDeBatalha.GameLogic.csproj
@@ -43,8 +43,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Background.cs" />
+    <Compile Include="Bullet.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="GameObject.cs" />
+    <Compile Include="GameOver.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Media.Designer.cs">
       <AutoGen>True</AutoGen>
